Mon Jul 18 16:06:27 UTC 2011  William Otte  <wotte@Williams-MacBook-Air.local>

        * ace/OS_NS_errno.h:

          Resolved conflict from merge from head.

Mon Jul 18 15:35:27 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ace/OS_NS_errno.h:
        * ace/config-android.h:
        * ace/os_include/os_stropts.h:
        * ace/os_include/sys/os_sem.h:
        * ace/os_include/sys/os_shm.h:
        * include/makeinclude/platform_android.GNU:

          Android patches from SAIC. xs

Local Variables:
mode: change-log
add-log-time-format: (lambda () (progn (setq tz (getenv "TZ")) (set-time-zone-rule "UTC") (setq time (format-time-string "%a %b %e %H:%M:%S %Z %Y" (current-time))) (set-time-zone-rule tz) time))
indent-tabs-mode: nil
End: