@@ -1,3 +1,11 @@
+Tue Jul 19 18:01:43 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * ace/OS_NS_errno.h:
+        * ace/config-android.h:
+        * include/makeinclude/platform_android.GNU:
+
+          Initial work to forward-port to head.
+
 Mon Jul 18 16:06:27 UTC 2011  William Otte  <wotte@Williams-MacBook-Air.local>
 
         * ace/OS_NS_errno.h:
